Fixed an alignment problem

--- a/hw_session/static/hw_session_small.css
+++ b/hw_session/static/hw_session_small.css
@@ -65,6 +65,7 @@ h3{
 
 .assignment{
     display: flex;
+    align-items: center;
 }
 
 .assignment p{
